objects/SDOC__SDocsSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>SDOC__Allow_Templates_With_Error_to_Generate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Templates With Error to Generate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Concurrent_Master_Wait_Time__c</fullName>
        <label>Concurrent Master Wait Time</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDOC__ConnectedAppAudienceURL__c</fullName>
        <label>ConnectedAppAudienceURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__ConnectedAppCertificateName__c</fullName>
        <description>Name of the certificate Record you used to sign the SDocs connected App.
In the Connected App settings, under the API (Enable OAuth Settings) header a Digital Signature was uploaded. This corresponds the the name (Label) of the certificate record.</description>
        <inlineHelpText>Name of the certificate Record you used to sign the SDocs connected App.
In the Connected App settings, under the API (Enable OAuth Settings) header a Digital Signature was uploaded. This corresponds the the name (Label) of the certificate record.</inlineHelpText>
        <label>ConnectedAppCertificateName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__ConnectedAppConsumerKey__c</fullName>
        <description>Consumer Key for the SDocs connected App.
In the Connected App settings record for S-Docs, under the API (Enable OAuth Settings) header section, look for the field labeled a field labeled &quot;Consumer Key&quot;.</description>
        <inlineHelpText>Consumer Key for the SDocs connected App.
In the Connected App settings record for S-Docs, under the API (Enable OAuth Settings) header section, look for the field labeled a field labeled &quot;Consumer Key&quot;.</inlineHelpText>
        <label>ConnectedAppConsumerKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__ConnectedAppLoginURL__c</fullName>
        <defaultValue>&quot;https://login.salesforce.com&quot;</defaultValue>
        <description>Production: https://login.salesforce.com
Sandbox: https://test.salesforce.com</description>
        <inlineHelpText>Production: https://login.salesforce.com
Sandbox: https://test.salesforce.com</inlineHelpText>
        <label>ConnectedAppLoginURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__ConnectedAppTokenURL__c</fullName>
        <label>ConnectedAppTokenURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__ConnectedAppUserName__c</fullName>
        <description>Optional - only if you want the the process to run under a specific user. If a userName is not provided in the call, then this user will be used.</description>
        <inlineHelpText>Optional - only if you want the the process to run under a specific user. If a userName is not provided in the call, then this user will be used.</inlineHelpText>
        <label>ConnectedAppUserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Disable_SDJob_Get_Content_For_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable SDJob Get Content For Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Dont_Run_SDTemplate_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Don&apos;t Run SDTemplate Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Enable_Create_Salesforce_Task_Feature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Create Salesforce Task Feature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Keep_Span_Tags_When_Using_Job_Splitters__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field previously was &quot;Keep Span Tags When Using Job Splitters&quot; and was deprecated in version 4.217</description>
        <inlineHelpText>This field previously was &quot;Keep Span Tags When Using Job Splitters&quot; and was deprecated in version 4.217</inlineHelpText>
        <label>(Deprecated Setting)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Platform_Encryption_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check only if platform encryption is enabled in org.</description>
        <inlineHelpText>Check only if platform encryption is enabled in org.</inlineHelpText>
        <label>Platform Encryption Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Process_Job_Splitters_Concurrently__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Process Job Splitters Concurrently</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__SDEdit_Custom_URL__c</fullName>
        <label>SDEdit Custom URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__SDRelationship_Lookup_Names__c</fullName>
        <label>SDRelationship Lookup Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__SDTemplateEditor_Page_Size__c</fullName>
        <description>This changes how many fields are displayed in the field picker for the Insert Field, Insert Related List, and Insert RENDER wizards on the SDTemplateEditor page</description>
        <inlineHelpText>This changes how many fields are displayed in the field picker for the Insert Field, Insert Related List, and Insert RENDER wizards on the SDTemplateEditor page</inlineHelpText>
        <label>SDTemplateEditor Page Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDOC__SD_Jobs_Batch_Size__c</fullName>
        <description>Recommended batch size is 30.</description>
        <inlineHelpText>Recommended batch size is 30.</inlineHelpText>
        <label>SD Jobs Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDOC__SD_Jobs_Fail_If_Template_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SD Jobs Fail If Template Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__SD_Jobs_Top_of_Queue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Global Setting will move all S-Docs Batch jobs to top of queue ahead of any other asynchronous jobs (eg Batch Jobs, Future Callouts etc)</description>
        <inlineHelpText>Global Setting will move all S-Docs Batch jobs to top of queue ahead of any other asynchronous jobs (eg Batch Jobs, Future Callouts etc)</inlineHelpText>
        <label>SD Jobs Move to Top of Flex Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Salesforce_Home_URL__c</fullName>
        <label>Salesforce Home URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Send_SDJobs_Email_as_Future__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this button will make emails sent out through S-Docs Jobs be sent through a future method. This allows the generated documents to be attached to the email record.</inlineHelpText>
        <label>Send SDJobs Email as Future</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Use_Legacy_AWS_S3_Spaces__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Legacy AWS S3 Spaces</label>
        <type>Checkbox</type>
    </fields>
    <label>SDocsSettings</label>
</CustomObject>